deploy/test-cluster/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-auth
  namespace: ingress
spec:
  basicAuth:
    realm: e-ks
    secret: http-basic-auth
