deploy/test-cluster/oauth-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^.+\.kiesraad\.net$`) && PathPrefix(`/oauth2`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: http
  # This falls back to the default certificate, which should be a wildcard cert for *.kiesraad.net
  tls: {}
